<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/back"
                android:onClick="onBackClick"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:clickable="true"
                app:srcCompat="@drawable/arrow_back_blue" />

            <TextView
                android:id="@+id/textViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="30dp"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">
            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/profile">
            </ImageView>
            <TextView
                android:id="@+id/profileName"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/accountName"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_back_round"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/myAccText"
            android:textSize="16sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/authorization"
            android:onClick="onAuthorizationClick"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_back_top"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/authorizationLine"
            android:textSize="16sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/registration"
            android:onClick="onRegistrationClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_back_not_round"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/registrationLine"
            android:textSize="16sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/logOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/acc_back_bottom"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/logOut"
            android:textSize="16sp"
            android:textColor="@color/white">
        </TextView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>