<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.home.HomeFragment"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <!-- Список недавних фильмов -->
        <TextView
            android:id="@+id/textViewRecent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerViewSecond"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/recent"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/accountImage"
            android:onClick="onAccountImageClick"
            android:clickable="true"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/account"
            app:layout_constraintBottom_toBottomOf="@+id/textViewRecent"
            app:layout_constraintEnd_toEndOf="parent">
        </ImageView>

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewRecent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToPadding="false"
        android:orientation="horizontal"/>

    <!-- Надпись Популярное -->
        <TextView
            android:id="@+id/textViewPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerView"
            android:fontFamily="sans-serif-medium"
            android:text="@string/popular"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView"
            tools:ignore="MissingConstraints" />

    <!-- Текст "еще" -->
        <TextView
            android:id="@+id/textViewMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/more"
            android:textColor="@color/black"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewPopular"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="18dp"
            android:paddingBottom="50dp"
            android:layout_below="@+id/textViewPopular"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textViewPopular" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>