<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/arrow_back_blue" />

            <TextView
                android:id="@+id/textViewSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="30dp"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editTextEmailAddress"
            android:layout_width="237dp"
            android:layout_height="49dp"
            android:layout_marginTop="104dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="237dp"
            android:layout_height="49dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="Password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="41dp"
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

        <Button
            android:id="@+id/buttonRegister"
            app:backgroundTint="@color/blue"
            android:background="@drawable/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/registr"
            android:onClick="register"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

        <LinearLayout
            android:id="@+id/linearLayoutSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="170dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonRegister">

            <TextView
                android:id="@+id/textView"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Do_you_have_an_account"
                android:textColor="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewLogin"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Авторизироваться"
                android:onClick="goToLogin"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>